--- a/index.html
+++ b/index.html
@@ -10,25 +10,46 @@
     <div id="wikidata-info"></div>
 
     <script>
-        // Function to fetch data from Wikidata API
+        // Function to fetch data from Wikidata API with CORS proxy
         async function fetchWikidataItem(itemId) {
-            const response = await fetch(`https://www.wikidata.org/wiki/Special:EntityData/${itemId}.json`);
-            const data = await response.json();
-            return data;
+            try {
+                // Use CORS proxy for bypassing CORS
+                const url = `https://api.allorigins.win/get?url=https://www.wikidata.org/wiki/Special:EntityData/${itemId}.json`;
+                console.log(`Fetching data from: ${url}`);
+                const response = await fetch(url);
+
+                if (!response.ok) {
+                    throw new Error(`Network response was not ok: ${response.statusText}`);
+                }
+
+                const jsonResponse = await response.json();
+                const data = JSON.parse(jsonResponse.contents); // Parse the response body
+                console.log('Data fetched successfully:', data);
+                
+                return data;
+            } catch (error) {
+                console.error('Error fetching Wikidata item:', error);
+                return null;
+            }
         }
 
         // Example: Fetch and display information about Q42 (Douglas Adams)
         fetchWikidataItem('Q42').then(data => {
-            const entity = data.entities['Q42'];
-            const label = entity.labels.en.value;
-            const description = entity.descriptions.en.value;
+            if (data) {
+                const entity = data.entities['Q42'];
+                const label = entity.labels.en.value;
+                const description = entity.descriptions.en.value;
 
-            document.getElementById('wikidata-info').innerHTML = `
-                <h2>${label}</h2>
-                <p>${description}</p>
-            `;
+                document.getElementById('wikidata-info').innerHTML = `
+                    <h2>${label}</h2>
+                    <p>${description}</p>
+                `;
+            } else {
+                document.getElementById('wikidata-info').innerHTML = '<p>Error fetching data.</p>';
+            }
         }).catch(error => {
-            console.error('Error fetching Wikidata item:', error);
+            document.getElementById('wikidata-info').innerHTML = '<p>Error fetching data.</p>';
+            console.error('Error in fetchWikidataItem:', error);
         });
     </script>
 </body>
